# proto-vps-switcher

./: Cargo.toml
.github/workflows/: rust.yml
src/: app.rs  config.rs  i18n.rs  main.rs  ssh.rs  ui.rs
src/helper/: comp.rs  mod.rs  test.rs  tui.rs
src/modules/menu/: main_menu.rs
